@@ -1,3 +1,8 @@
+2003-03-03  Thorsten Kukuk  <kukuk@suse.de>
+
+	* lib/access.c (is_valid): Don't deny access if map does not
+	exist (else the error code is wrong).
+
 2003-02-05  Thorsten Kukuk  <kukuk@suse.de>
 
 	* release version 2.8
